package com.directi.training.dip.solution;

public interface IReader {
    String read();
}
