package com.directi.training.dip.solution;

public interface IWriter {
    void write(String encodedData);
}
